storageops/statefulapp/pricelist-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "0"
