storageops/statefulapp/pricelist-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    tier: database
  name: mysql
  namespace: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
        tier: database
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.ebs.csi.aws.com/zone
                operator: In
                values:
                - us-east-1a
      serviceAccountName: pricelist-db-sa
      securityContext:
        ####runAsUser: 65534
        supplementalGroups: [65534]
      containers:
      - image: registry.access.redhat.com/rhscl/mysql-56-rhel7:latest
        name: mysql
        resources:
          requests:
            memory: "512Mi"
            cpu: "512m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - mountPath: /var/lib/mysql/data
          name: mysql-db
      volumes:
      - name: mysql-db
        persistentVolumeClaim:
          claimName: pricelist-db-pvc
